# sipServer

./: .gitignore  README.md
sipServer/: CMakeLists.txt
sipServer/.cache/clangd/index/: main.cpp.479FAA6D56C0AE14.idx  myAppManage.cpp.1C950EE5A2BDE371.idx  myAppManage.h.88368F58485633C6.idx  myBaseHelper.h.6E1C94D92223D483.idx  myConfigDef.h.FE299100DD11307E.idx  myDataDef.h.A37308F85253AFF0.idx  myJsonHelper.cpp.48EECB0184932B89.idx  myJsonHelper.h.5D7529648F10D80B.idx  myRandomHelper.cpp.B909E51871270FA8.idx  myRandomHelper.h.8626AFAD4E6CBE24.idx  myServManage.cpp.69B46724F08B37C0.idx  myServManage.h.5F82E0C74C902770.idx  mySipAppHelper.cpp.558BBCD86526731F.idx  mySipAppHelper.h.112746570F0F22C2.idx  mySipCatalogApp.cpp.D8B4E11413AFB1B6.idx  mySipCatalogApp.h.94303FA77F8CC3D1.idx  mySipMsgDef.h.99CBE6188BB6500A.idx  mySipMsgHelper.cpp.5AFC7CCDB3E1B318.idx  mySipMsgHelper.h.148ACC7465CD7247.idx  mySipMsgProcApp.cpp.7EB427CAFC627119.idx  mySipMsgProcApp.h.EFEEFD2EBF011A67.idx  mySipRegApp.cpp.09AA0A2CA9E9B17A.idx  mySipRegApp.h.ACEF1F8A4F1DFBDE.idx  mySipServCatalogManager.cpp.5CAA7435D9A506ED.idx  mySipServCatalogManager.h.D87690928058110C.idx  mySipServRegManage.cpp.84EE297AC5DFF010.idx  mySipServRegManage.h.9CDA8F20B15D4B90.idx  mySipServer.cpp.1B01C3FA148F910F.idx  mySipServer.h.926CEBE8507E5AC8.idx  mySipServerHelper.cpp.52216E11F3ED6B34.idx  mySipServerHelper.h.BECF5E096D02E575.idx  myStrHelper.cpp.54D1E9F1590F6D50.idx  myStrHelper.h.87D9955F8C77F528.idx  mySystemConfg.cpp.F7F8B0A37BECFE46.idx  mySystemConfg.h.8323044BF7BECF91.idx  mySystemEnvir.cpp.51105166170AFE74.idx  mySystemEnvir.h.64FCF23C62DB7178.idx  mySystemPjsip.cpp.60B069CDE24B63EA.idx  mySystemPjsip.h.8851B4742DB67910.idx  mySystemSigCatch.cpp.DC005FE9943B5AAC.idx  (+8 more)
sipServer/conf/: servCfg.ini  servReg.json  serverCfg.ini  serverConfig.ini  serverRegist.json  serverSdpPlay.sdp  template_servAddr.json  template_servCatalog.json  template_servCfg.ini  template_servReg.json
sipServer/include/app/: mySipApp.h  mySipCatalogApp.h  mySipInviteApp.h  mySipMsgProcApp.h  mySipReg.h  mySipRegApp.h
sipServer/include/common/: myConfigDef.h  myDataDef.h  mySdpDef.h  mySipMsgDef.h  myTypeDef.h
sipServer/include/envir/: mySignaleCatch.h  mySignaleCatcher.h  mySystemAppManage.h  mySystemConfg.h  mySystemEnvir.h  mySystemPjsip.h  mySystemServManage.h  mySystemSigCatch.h  mySystemThreadPool.h
sipServer/include/event/: myEvent.h  myEventListener.h
sipServer/include/manager/: myAppManage.h  myServManage.h  mySipCatalogManage.h  mySipRegManage.h  mySipServCatalogManage.h  mySipServCatalogManager.h  mySipServRegManage.h  mySipSessionManage.h
sipServer/include/sdp/: mySdpAttr.h  mySdpMedia.h  mySdpParse.h  mySdpReg.h  mySdpSession.cpp  mySdpSession.h
sipServer/include/server/: myHttpServer.h  mySipServer.h
sipServer/include/utils/: myBaseHelper.h  myHelper.h  myJsonHelper.h  myLogHelper.h  myRandomHelper.h  mySdpHelper.h  myServerHelper.h  mySipAppHelper.h  mySipMsgHelper.h  mySipServerHelper.h  myStrHelper.h  myThreadHelper.h  myTimeHelper.h  myXmlHelper.h
sipServer/log/: sipServer.INFO  sipServer.WARNING  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-012546.85873  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-012909.88450  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-013150.89683  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-013331.90336  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-013426.90739  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-013445.90878  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-015018.112918  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-015252.114432  sipServer.quhan-virtual-machine.quhan.log.INFO.20250108-015526.115725  sipServer.quhan-virtual-machine.quhan.log.WARNING.20250108-013144.88450  sipServer.quhan-virtual-machine.quhan.log.WARNING.20250108-013203.89683  sipServer.quhan-virtual-machine.quhan.log.WARNING.20250108-013347.90336  sipServer.quhan-virtual-machine.quhan.log.WARNING.20250108-013431.90739  sipServer.quhan-virtual-machine.quhan.log.WARNING.20250108-013511.90878
sipServer/src/: main.cpp  myAppManage.cpp  myBaseHelper.cpp  myEvent.cpp  myEventListener.cpp  myHelper.cpp  myHttpServer.cpp  myJsonHelper.cpp  myLogHelper.cpp  myRandomHelper.cpp  mySdpAttr.cpp  mySdpHelper.cpp  mySdpMedia.cpp  mySdpParse.cpp  mySdpReg.cpp  mySdpSession.cpp  myServManage.cpp  myServerHelper.cpp  mySignaleCatch.cpp  mySignaleCatcher.cpp  mySipApp.cpp  mySipAppHelper.cpp  mySipCatalogApp.cpp  mySipCatalogManage.cpp  mySipInviteApp.cpp  mySipMsgHelper.cpp  mySipMsgProcApp.cpp  mySipReg.cpp  mySipRegApp.cpp  mySipRegManage.cpp  mySipServCatalogManage.cpp  mySipServCatalogManager.cpp  mySipServRegManage.cpp  mySipServer.cpp  mySipServerHelper.cpp  mySipSessionManage.cpp  myStrHelper.cpp  mySystemAppManage.cpp  mySystemConfg.cpp  mySystemEnvir.cpp  (+7 more)
testDemo/01_gflags_test/: CMakeLists.txt  main.cpp
testDemo/02_glog_test/: CMakeLists.txt  main.cpp
testDemo/03_boost_test/: CMakeLists.txt  main.cpp
testDemo/03_pjsip_test/: CMakeLists.txt  main.cpp
testDemo/04_jsoncpp_test/: CMakeLists.txt  main.cpp
testDemo/05_tinyxml2_test/: CMakeLists.txt  main.cpp
testDemo/06_libevent_test/: CMakeLists.txt  main.cpp
testDemo/07_simpleini_test/: CMakeLists.txt  main.cpp
testDemo/08_zltoolkit_test/: CMakeLists.txt  main.cpp
testDemo/09_uuid_test/: CMakeLists.txt  main.cpp
testDemo/10_tinyxml2_test/: main.cpp
testDemo/11_sipServer_test/lowerServer/: lowerServAddr.json  lowerServCatalog.json  lowerServCfg.ini  lowerServReg.json  lowerServSdpPlay.sdp
testDemo/11_sipServer_test/lowerServer/log/: sipServer.ERROR  sipServer.INFO  sipServer.WARNING  sipServer.ubuntu24.quhan.log.ERROR.20250404-172320.310991  sipServer.ubuntu24.quhan.log.ERROR.20250404-180030.329586  (+54 more)
testDemo/11_sipServer_test/upperServer/: upperServAddr.json  upperServCatalog.json  upperServCfg.ini  upperServReg.json  upperServSdpPlay.sdp
testDemo/12_httpServer_test/: httpClient.py  httpReqDeviceInfo.py  httpReqDeviceList.py  httpReqDeviceMedia.py
(+64 files in other folders)
